[package]
name = "roxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
glob = "0.3.1"
pulldown-cmark = "0.9.3"
regex = "1.9.1"
serde = { version = "1.0.174", features = ["derive"] }
tera = "1.19.0"
